# src/controllers/author.controller.ts
@@ -2,6 +2,7 @@ import { Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch } from "t
 import { authorService } from "../services/author.service";
 import { AuthorDTO } from "../dto/author.dto";
 import { Author } from "../models/author.model";  
+import { BookDTO } from "../dto/book.dto";
 
 
 @Route("authors")
@@ -58,6 +59,17 @@ export class AuthorController extends Controller {
     return authorService.updateAuthor(id, first_name, last_name);
   }
 
+  @Get('{id}/books')
+  public async getBooksByAuthor(@Path() id: number): Promise<BookDTO[] | null> {
+    const author = await authorService.getAuthorById(id);
 
+    if (!author) {
+      const error = new Error('Author not found');
+      (error as any).status = 404;
+      throw error;
+    }
+
+    return authorService.getBooksByAuthor(id);
+  }
   
 }
